# PythonTutorials

./: README.md  environment.html  index.html  introduction.html  pyproject.toml
.github/workflows/: gh-pages.yml
notebook/preparation/: 第2回20220419_予習.ipynb  第3回20220426_予習.ipynb
notebook/problems/: 第1回20220413_問題.ipynb  第2回20220419_問題.ipynb  第3回20220426_問題.ipynb
notebook/supplements/: 第1回20220413_解説.ipynb  第2回20220419_解説.ipynb  第3回20220426_解説.ipynb
public/: index.html
slide_deck/: environment.md  introduction.md
