[tool.poetry]
name = "pythontutorials"
version = "0.1.0"
description = "Materials for Python Tutorials"
authors = ["Kaoru Nishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
numpy = "^1.21"
sympy = "^1.10.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.3"
jupyter = "^1.0"
notebook = "^6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
